--- a/css/style.css
+++ b/css/style.css
@@ -451,8 +451,13 @@ footer {}
     }
 
     .about-right {
+        justify-content: center;
         margin-top: 5%;
         width: 70%;
+    }
+
+    .about-right div {
+        width: 47.5%;
     }
 }
 
@@ -525,8 +530,13 @@ footer {}
     }
 
     .about-right {
+        justify-content: center;
         margin-top: 9%;
         width: 100%;
+    }
+
+    .about-right div {
+        width: 47.5%;
     }
 
     .about-right h4 {
